WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).

-------------------------------------------------------------------



-------------------------------------------------------------------
4.29.0:

-Updated / new documentation, including the README and Help / FAQ section.

-Misc UX revisions

-Zingchart upgrade

-Housekeeping

v4.27.0 and higher of this app RESETS ALL PLUGIN CACHES (A DIRECTORY STRUCTURE UPGRADE), 
SO ANY PLUGIN ALERTS / TRACKING WILL BE RESET. THE !FIRST! PLUGIN RUNTIMES AFTER UPGRADING
WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).

-------------------------------------------------------------------



-------------------------------------------------------------------
4.29.1:

-Significant bug fixes / UX revisions for auto-install script

-Minor documentation / app UX revisions

v4.27.0 and higher of this app RESETS ALL PLUGIN CACHES (A DIRECTORY STRUCTURE UPGRADE), 
SO ANY PLUGIN ALERTS / TRACKING WILL BE RESET. THE !FIRST! PLUGIN RUNTIMES AFTER UPGRADING
WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).

-------------------------------------------------------------------



-------------------------------------------------------------------
4.29.2:

-Bug fix for login authentication WITH MULTIPLE INSTALLS ON THE #SAME# MACHINE / SERVER (logged into both instances, with only one login)

-Bug fix for system stats correctly detecting the number of CPU threads / cores (affected system load alerts)

-Improved login captcha image security

-Misc UX revisions

v4.27.0 and higher of this app RESETS ALL PLUGIN CACHES (A DIRECTORY STRUCTURE UPGRADE), 
SO ANY PLUGIN ALERTS / TRACKING WILL BE RESET. THE !FIRST! PLUGIN RUNTIMES AFTER UPGRADING
WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).

-------------------------------------------------------------------









