@@ -5,7 +5,7 @@
 
 
 	// Have this script not load any code if system stats are not turned on, or key GET request corrupt
-	if ( !isset( $_SESSION['admin_logged_in'][md5($base_url)] ) || !is_numeric($_GET['key']) ) {
+	if ( !admin_logged_in() || !is_numeric($_GET['key']) ) {
 	exit;
 	}
 
