@@ -4386,6 +4386,8 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 
 -Bug fix for system stats correctly detecting the number of CPU threads / cores (affected system load alerts)
 
+-Hardened login authorization (half stored in cookie / half stored in session, BOTH required to login)
+
 -Improved login captcha image security
 
 -Misc UX revisions
